--- a/index.html
+++ b/index.html
@@ -3,10 +3,20 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="./styles/normalize.css">
+  <link rel="stylesheet" href="./styles/style.css">
   <title>Научиться учиться</title>
 </head>
 <body>
   <div class="page">
+    <header class="header centered-block">
+      <div class="logo logo_place_header"></div>
+      <h1 class="header__title">Научиться учиться</h1>
+      <p class="header__subtitle">Какие современные и эффективные подходы к обучению вы можете использовать в своей жизни? <a class="link" href="#">Узнать →</a></p>
+      <img src="./images/header-image.png" class="header__main-illustration" alt="Картина художника Фёдора Решетникова &quotОпять двойка&quot" width="765" height="608"> 
+      <div class="header__square-pic"></div>
+
+    </header>
 
   </div>
 </body>
