добавлена секция feynman, стандартизированы правила для style.css, исправлены ошибки в digits (отступы, тексты)

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <div class="logo logo_place_header"></div>
       <h1 class="header__title">Научиться учиться</h1>
       <p class="header__subtitle">Какие современные и эффективные подходы к обучению вы можете использовать в своей жизни?
-        <a class="link header__link" href="#">Узнать →</a></p>
+        <a class="header__link" href="#">Узнать →</a></p>
       <img src="./images/header-image.png" class="header__main-illustration" alt="Картина художника Фёдора Решетникова &quotОпять двойка&quot" width="765" height="608">
       <div class="header__square-pic"></div>
     </header>
@@ -72,6 +72,11 @@
             <p class="table__text">Открытие условного рефлекса</p>
           </div>
         </div>
+      </section>
+      <section class="feynman">
+        <h2 class="feynman__title">Метод Фейнмана</h2>
+        <h3 class="feynman__subtitle">Выучить и не забыть.</h3>
+        <a class="feynman__link" href="#">Подробнее →</a>
       </section>
     </main>
   </div>
