--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
         </div>
       </section>
       <section class="digits">
-        <h2 class="section-title digits__title">Цифры и факты</h2>
-        <h3 class="section-subtitle digits__subtitle">Про учёбу и мозг</h3>
+        <h2 class="section-title">Цифры и факты</h2>
+        <h3 class="section-subtitle">Про учёбу и мозг</h3>
         <div class="table">
           <div class="table__cell">
             <h4 class="table__heading">86 миллиардов</h4>
@@ -77,6 +77,53 @@
         <h2 class="feynman__title">Метод Фейнмана</h2>
         <h3 class="feynman__subtitle">Выучить и не забыть.</h3>
         <a class="feynman__link" href="#">Подробнее →</a>
+      </section>
+      <section class="kaufman">
+        <h2 class="section-title_theme_dark">Принципы обучения</h2>
+        <h3 class="section-subtitle_theme_dark">от Джоша Кауфмана</h3>
+        <div class="table_theme_dark">
+          <div class="table__cell_theme_dark">
+            <h4 class="table__heading_theme_dark">1</h4>
+            <p class="table__text_theme_dark">Выберите привлекательный проект.</p>
+          </div>
+          <div class="table__cell_theme_dark">
+            <h4 class="table__heading_theme_dark">2</h4>
+            <p class="table__text_theme_dark">Сосредоточьтесь на каком-то одном навыке.</p>
+          </div>
+          <div class="table__cell_theme_dark">
+            <h4 class="table__heading_theme_dark">3</h4>
+            <p class="table__text_theme_dark">Определите целевой уровень мастерства.</p>
+          </div>
+          <div class="table__cell_theme_dark">
+            <h4 class="table__heading_theme_dark">4</h4>
+            <p class="table__text_theme_dark">Разбейте навык на элементы.</p>
+          </div>
+          <div class="table__cell_theme_dark">
+            <h4 class="table__heading_theme_dark">5</h4>
+            <p class="table__text_theme_dark">Приготовьте всё необходимое для занятий.</p>
+          </div>
+          <div class="table__cell_theme_dark">
+            <h4 class="table__heading_theme_dark">6</h4>
+            <p class="table__text_theme_dark">Устраните препятствия для занятий.</p>
+          </div>
+          <div class="table__cell_theme_dark">
+            <h4 class="table__heading_theme_dark">7</h4>
+            <p class="table__text_theme_dark">Выделите специальное время для занятий.</p>
+          </div>
+          <div class="table__cell_theme_dark">
+            <h4 class="table__heading_theme_dark">8</h4>
+            <p class="table__text_theme_dark">Создайте быстрые петли обратной связи.</p>
+          </div>
+          <div class="table__cell_theme_dark">
+            <h4 class="table__heading_theme_dark">9</h4>
+            <p class="table__text_theme_dark">Занимайтесь по расписанию, короткими интенсивными интервалами.</p>
+          </div>
+          <div class="table__cell_theme_dark">
+            <h4 class="table__heading_theme_dark">10</h4>
+            <p class="table__text_theme_dark">Уделяйте внимание количеству и скорости.</p>
+          </div>
+        </div>
+        <img  class="kaufman__triangle" src="./images/kaufman-triangle.svg" alt="Синий треугольник">
       </section>
     </main>
   </div>
