добавлен блок footer

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
   <div class="page">
     <header class="header">
-      <div class="logo logo_place_header"></div>
+      <div class="logo_place_header"></div>
       <h1 class="header__title">Научиться учиться</h1>
       <p class="header__subtitle">Какие современные и эффективные подходы к обучению вы можете использовать в своей жизни?
         <a class="header__link" href="#">Узнать →</a></p>
@@ -123,9 +123,29 @@
             <p class="table__text_theme_dark">Уделяйте внимание количеству и скорости.</p>
           </div>
         </div>
-        <img  class="kaufman__triangle" src="./images/kaufman-triangle.svg" alt="Синий треугольник">
+        <div class="kaufman__triangle"></div>
       </section>
     </main>
+    <footer class="footer">
+      <div class="footer__columns">
+        <div class="footer__column_content_copyright">
+          <div class="logo_place_footer"></div>
+          <p class="footer__author">&copy Лия Высоцкая</p>
+        </div>
+        <ul class="footer__column_content_info">
+          <h4 class="footer__column-heading">О Практикуме</h4>
+          <li><a class="footer__column-link" href="#">Главная</a></li>
+          <li><a class="footer__column-link" href="#">Концепция</a></li>
+          <li><a class="footer__column-link" href="#">Наставники</a></li>
+        </ul>
+        <ul class="footer__column_content_social">
+          <h4 class="footer__column-heading">Соцсети</h4>
+          <li><a class="footer__column-link" href="#"><img class="footer__social-icon" src="./images/youtube-icon.svg">YouTube</a></li>
+          <li><a class="footer__column-link" href="#"><img class="footer__social-icon" src="./images/vk_color_white.svg">ВКонтакте</a></li>
+          <li><a class="footer__column-link" href="#"><img class="footer__social-icon" src="./images/tiktok-icon.svg">TikTok</a></li>
+        </ul>
+      </div>
+    </footer>
   </div>
 </body>
 </html>
