--- a/index.html
+++ b/index.html
@@ -134,15 +134,19 @@
         </div>
         <nav class="footer__column footer__column_content_info">
           <h4 class="footer__column-heading">О Практикуме</h4>
-          <ul class="footer__column-links"><a class="footer__column-link" href="#">Главная</a></ul>
-          <ul class="footer__column-links"><a class="footer__column-link" href="#">Концепция</a></ul>
-          <ul class="footer__column-links"><a class="footer__column-link" href="#">Наставники</a></ul>
+          <ul class="footer__column-links">
+            <li class="footer__column-links"><a class="footer__column-link" href="#">Главная</a></li>
+            <li class="footer__column-links"><a class="footer__column-link" href="#">Концепция</a></li>
+            <li class="footer__column-links"><a class="footer__column-link" href="#">Наставники</a></li>
+          </ul>
         </nav>
         <nav class="footer__column footer__column_content_social">
           <h4 class="footer__column-heading">Соцсети</h4>
-          <ul class="footer__column-links"><a class="footer__column-link" href="#"><img class="footer__social-icon" src="./images/youtube-icon.svg" alt="иконка YouTube">YouTube</a></ul>
-          <ul class="footer__column-links"><a class="footer__column-link" href="#"><img class="footer__social-icon" src="./images/vk_color_white.svg" alt="иконка ВКонтакте">ВКонтакте</a></ul>
-          <ul class="footer__column-links"><a class="footer__column-link" href="#"><img class="footer__social-icon" src="./images/tiktok-icon.svg" alt="иконка TikTok">TikTok</a></ul>
+          <ul class="footer__column-links">
+            <li><a class="footer__column-link" href="#"><img class="footer__social-icon" src="./images/youtube-icon.svg" alt="иконка YouTube">YouTube</a></li>
+            <li class="footer__column-links"><a class="footer__column-link" href="#"><img class="footer__social-icon" src="./images/vk_color_white.svg" alt="иконка ВКонтакте">ВКонтакте</a></li>
+            <li class="footer__column-links"><a class="footer__column-link" href="#"><img class="footer__social-icon" src="./images/tiktok-icon.svg" alt="иконка TikTok">TikTok</a></li>
+          </ul>
         </nav>
       </div>
     </footer>
