исправлены ошибки в соответствии с чек-листом

--- a/index.html
+++ b/index.html
@@ -38,27 +38,27 @@
         <p class="section-subtitle">Пять практик от Барбары Оакли</p>
         <ul class="cards">
             <li class="cards__item">
-              <img class="cards__image" alt="attention" src="./images/cards-attention.png">
+              <img class="cards__image" alt="Внимание" src="./images/cards-attention.png">
               <h4 class="cards__title">Два вида внимания</h4>
               <p class="cards__description">Глубокие знания возникают, если чередовать сфокусированное и рассеянное мышление.</p>
             </li>
             <li class="cards__item">
-              <img class="cards__image" alt="Recall" src="./images/cards-recall.png">
+              <img class="cards__image" alt="Воспоминания" src="./images/cards-recall.png">
               <h4 class="cards__title">Recall</h4>
               <p class="cards__description">Вспоминайте изученное — это позволит соединить разрозненные порции памяти.</p>
             </li>
             <li class="cards__item">
-              <img class="cards__image" alt="interliving" src="./images/cards-interliving.png">
+              <img class="cards__image" alt="Интерливинг" src="./images/cards-interliving.png">
               <h4 class="cards__title">Интерливинг</h4>
               <p class="cards__description">Изучайте несколько навыков одновременно, они обогащают друг друга.</p>
             </li>
             <li class="cards__item">
-              <img class="cards__image" alt="Questions" src="./images/cards-question.png">
+              <img class="cards__image" alt="Вопросы" src="./images/cards-question.png">
               <h4 class="cards__title">Вопросы</h4>
               <p class="cards__description">Слушая преподавателя, придумывайте хороший вопрос, который вас действительно волнует.</p>
             </li>
             <li class="cards__item">
-              <img class="cards__image" alt="Competence" src="./images/cards-competence.png">
+              <img class="cards__image" alt="Компетентность" src="./images/cards-competence.png">
               <h4 class="cards__title">Иллюзия компетентности</h4>
               <p class="cards__description">Повторите про себя, запишите, расскажите другу: вам только кажется, что вы владеете новой темой.</p>
             </li>
