--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
       <section class="feynman">
         <h2 class="feynman__title">Метод Фейнмана</h2>
         <p class="feynman__subtitle">Выучить и не забыть.</p>
-        <a class="feynman__link" href="#">Подробнее →</a>
+        <a class="feynman__link" href="#" target="_blank">Подробнее →</a>
       </section>
       <section class="digits">
         <h2 class="section-title">Цифры и факты</h2>
@@ -133,11 +133,11 @@
           <h2 class="khan__title">Весь мир — школа</h2>
           <blockquote class="khan__quote">Страсть и новаторство Сала Хана меняют процесс обучения миллионов студентов по всему миру.
             Книгу «Весь мир — школа» нужно прочитать всем, кто занимается образованием — так учащиеся повсюду смогут получить навыки и знания, которые приносят успех в школе, карьере и жизни.</blockquote>
-          <h4 class="khan__quote-author">Джордж Лукас</h4>
+          <h3 class="khan__quote-author">Джордж Лукас</h3>
           <p class="khan__quote-author-subline">Кинорежиссер, продюсер</p>
           <div class="khan__book-container">
             <img class="khan__book-pic" src="./images/khan-book.jpg" alt="Весь мир- школа">
-            <a class="khan__buy-link" href="#">Купить книгу →</a>
+            <a class="khan__buy-link" href="#" target="_blank">Купить книгу →</a>
           </div>
         </div>
       </section>
@@ -192,10 +192,10 @@
         <h2 class="section-title">Полезные ресурсы</h2>
         <p class="section-subtitle">Больше материалов о техниках и лайфхаках обучения</p>
         <ul class="resources__logo-zone">
-          <li><a class="resources__link" href="#"><img class="resources__logo" src="./images/logo/resources-arzamas.svg" alt="иконка Арзамас"></a></li>
-          <li><a class="resources__link" href="#"><img class="resources__logo" src="./images/logo/resources-n1.svg" alt="иконка N+1"></a></li>
-          <li><a class="resources__link" href="#"><img class="resources__logo" src="./images/logo/resources-strelka.svg" alt="иконка Strelka"></a></li>
-          <li><a class="resources__link" href="#"><img class="resources__logo" src="./images/logo/resources-polka.svg" alt="иконка Полка"></a></li>
+          <li><a class="resources__link" href="#" target="_blank"><img class="resources__logo" src="./images/logo/resources-arzamas.svg" alt="иконка Арзамас"></a></li>
+          <li><a class="resources__link" href="#" target="_blank"><img class="resources__logo" src="./images/logo/resources-n1.svg" alt="иконка N+1"></a></li>
+          <li><a class="resources__link" href="#" target="_blank"><img class="resources__logo" src="./images/logo/resources-strelka.svg" alt="иконка Strelka"></a></li>
+          <li><a class="resources__link" href="#" target="_blank"><img class="resources__logo" src="./images/logo/resources-polka.svg" alt="иконка Полка"></a></li>
         </ul>
       </section>
     </main>
@@ -216,9 +216,9 @@
         <nav class="footer__column footer__column_content_social">
           <h4 class="footer__column-heading">Соцсети</h4>
           <ul class="footer__column-links">
-            <li><a class="footer__column-link" href="#"><img class="footer__social-icon" src="./images/youtube-icon.svg" alt="иконка YouTube">YouTube</a></li>
-            <li><a class="footer__column-link" href="#"><img class="footer__social-icon" src="./images/vk_color_white.svg" alt="иконка ВКонтакте">ВКонтакте</a></li>
-            <li><a class="footer__column-link" href="#"><img class="footer__social-icon" src="./images/tiktok-icon.svg" alt="иконка TikTok">TikTok</a></li>
+            <li><a class="footer__column-link" href="#" target="_blank"><img class="footer__social-icon" src="./images/youtube-icon.svg" alt="иконка YouTube">YouTube</a></li>
+            <li><a class="footer__column-link" href="#" target="_blank"><img class="footer__social-icon" src="./images/vk_color_white.svg" alt="иконка ВКонтакте">ВКонтакте</a></li>
+            <li><a class="footer__column-link" href="#" target="_blank"><img class="footer__social-icon" src="./images/tiktok-icon.svg" alt="иконка TikTok">TikTok</a></li>
           </ul>
         </nav>
       </div>
